Add arcane translation

--- a/deadlands/sheet/deadlands.html
+++ b/deadlands/sheet/deadlands.html
@@ -1866,16 +1866,16 @@ on("sheet:opened", function(eventInfo){
     <div class="sheet-row"> 
 		
 		  <input type="radio" name="attr_subtab" value="1" class="sheet-subtab sheet-subtab1" title="Werewolf" checked="checked"/>
-		<span class="sheet-subtab sheet-subtab1">Werewolf</span>
+		<span data-i18n="Werewolf" class="sheet-subtab sheet-subtab1">Werewolf</span>
 	  <input type="radio" name="attr_subtab" value="2" class="sheet-subtab sheet-subtab2" title="Huckster"/>
-		<span class="sheet-subtab sheet-subtab2">Huckster</span>
+		<span data-i18n="Huckster" class="sheet-subtab sheet-subtab2">Huckster</span>
 	<input type="radio" name="attr_subtab" value="3" class="sheet-subtab sheet-subtab3" title="Voodoo"/>
-		<span class="sheet-subtab sheet-subtab3">Voodoo</span>
+		<span data-i18n="Voodoo" class="sheet-subtab sheet-subtab3">Voodoo</span>
 			<input type="radio" name="attr_subtab" value="4" class="sheet-subtab sheet-subtab4" title="Martial arts"/>
-		<span class="sheet-subtab sheet-subtab4">Martial arts</span>
+		<span data-i18n="Martial arts" class="sheet-subtab sheet-subtab4">Martial arts</span>
         
       <div class="sheet-subsection-werewolf">
-          <h2><span data-i18n="arcaneAbilities">Werewolf</span></h2>
+          <h2><span data-i18n="Werewolf">Werewolf</span></h2>
         <div class="sheet-row">
             <div class="sheet-item sheet-large"><label><b><span data-i18n="skill">Skill</span></b></label></div>
             <div class="sheet-item sheet-small"><input type="number" min="0" name="attr_hexslinginlvl"></div>
@@ -1925,7 +1925,7 @@ on("sheet:opened", function(eventInfo){
         </div>
     </div>
       <div class="sheet-subsection-huckster">
-        <h2><span data-i18n="arcaneAbilities">Huckster</span></h2>
+        <h2><span data-i18n="Huckster">Huckster</span></h2>
         <div class="sheet-row">
           <div class="sheet-item sheet-large">
             <label><b><span data-i18n="skill">Skill</span></b></label>
@@ -2002,7 +2002,7 @@ on("sheet:opened", function(eventInfo){
         </div>
       </div>
       <div class="sheet-subsection-voodoo">
-        <h2><span data-i18n="arcaneAbilities">Voodoo</span></h2>
+        <h2><span data-i18n="Voodoo">Voodoo</span></h2>
         <div class="sheet-row">
           <div class="sheet-item sheet-large">
             <label><b><span data-i18n="skill">Skill</span></b></label>
@@ -2079,7 +2079,7 @@ on("sheet:opened", function(eventInfo){
         </div>
       </div>
       <div class="sheet-subsection-martial_arts">
-        <h2><span data-i18n="arcaneAbilities">Martial arts</span></h2>
+        <h2><span data-i18n="Martial arts">Martial arts</span></h2>
         <div class="sheet-row">
           <div class="sheet-item sheet-large">
             <label><b><span data-i18n="skill">Skill</span></b></label>
